--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="#">Über Mich</a></li>
         <li><a href="#">Werke</a></li>
         <li><a href="#">Kontakt</a></li>
