--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
     <header>
       <h1>Mein Portfolio</h1>
       <h2>Luca Conner Schnabl</h2>
+    </header>
     <nav>
       <ul>
         <li><a href="home.html">Home</a></li>
