--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <nav>
       <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="#">Über Mich</a></li>
-        <li><a href="#">Werke</a></li>
-        <li><a href="#">Kontakt</a></li>
+        <li><a href="aboutme.html">Über Mich</a></li>
+        <li><a href="werke">Werke</a></li>
+        <li><a href="kontakt">Kontakt</a></li>
       </ul>
     </nav>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ratione earum eveniet cumque autem incidunt numquam voluptatum eos magni, sunt, cum inventore odio veritatis quibusdam beatae quasi. Molestias qui vitae ipsa iusto quam laboriosam soluta reiciendis a corrupti suscipit. Quo ipsum natus commodi officiis quos fugiat adipisci dolor facilis repellat nemo, a, nulla molestias molestiae illum doloribus similique non ducimus quibusdam cupiditate voluptates laboriosam velit quia suscipit. Sed laboriosam, cupiditate culpa quam consequuntur dolore omnis! Hic quae quis neque voluptatum quos voluptas culpa doloribus. Eaque laudantium, ea deserunt obcaecati est ratione nulla, doloribus eum deleniti sed qui hic, facere quamLorem ipsum dolor sit amet consectetur adipisicing elit. Ad ratione earum eveniet cumque autem incidunt numquam voluptatum eos magni, sunt, cum inventore odio veritatis quibusdam beatae quasi. Molestias qui vitae ipsa iusto quam laboriosam soluta reiciendis a corrupti suscipit. Quo ipsum natus commodi officiis quos fugiat adipisci dolor facilis repellat nemo, a, nulla molestias molestiae illum doloribus similique non ducimus quibusdam cupiditate voluptates laboriosam velit quia suscipit. Sed laboriosam, cupiditate culpa quam consequuntur dolore omnis! Hic quae quis neque voluptatum quos voluptas culpa doloribus. Eaque laudantium, ea deserunt obcaecati est ratione nulla, doloribus eum deleniti sed qui hic, facere quamLorem ipsum dolor sit amet consectetur adipisicing elit. Ad ratione earum eveniet cumque autem incidunt numquam voluptatum eos magni, sunt, cum inventore odio veritatis quibusdam beatae quasi. Molestias qui vitae ipsa iusto quam laboriosam soluta reiciendis a corrupti suscipit. Quo ipsum natus commodi officiis quos fugiat adipisci dolor facilis repellat nemo, a, nulla molestias molestiae illum doloribus similique non ducimus quibusdam cupiditate voluptates laboriosam velit quia suscipit. Sed laboriosam, cupiditate culpa quam consequuntur dolore omnis! Hic quae quis neque voluptatum quos voluptas culpa doloribus. Eaque laudantium, ea deserunt obcaecati est ratione nulla, doloribus eum deleniti sed qui hic, facere quam</p>
