--- a/home.html
+++ b/home.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <header>
-      <h1>Mein Portfolio</h1>
+      <h1>Home</h1>
       <h2>Luca Conner Schnabl</h2>
     </header>
     <nav>
       <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="#">Über Mich</a></li>
-        <li><a href="#">Werke</a></li>
-        <li><a href="#">Kontakt</a></li>
+        <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <p>Home Seite</p>
