--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Kontakt</h1>
+      <h1>Contact</h1>
       <h2>Luca Conner Schnabl</h2>
     </header>
     <nav>
