--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Über Mich</h1>
+      <h1>About Me</h1>
       <h2>Luca Conner Schnabl</h2>
     </header>
     <nav>
