--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Werke</h1>
+      <h1>Projects</h1>
       <h2>Luca Conner Schnabl</h2>
     </header>
     <nav>
