--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
     </header>
     <nav>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ratione earum eveniet cumque autem incidunt numquam voluptatum eos magni, sunt, cum inventore odio veritatis quibusdam beatae quasi. Molestias qui vitae ipsa iusto quam laboriosam soluta reiciendis a corrupti suscipit. Quo ipsum natus commodi officiis quos fugiat adipisci dolor facilis repellat nemo, a, nulla molestias molestiae illum doloribus similique non ducimus quibusdam cupiditate voluptates laboriosam velit quia suscipit. Sed laboriosam, cupiditate culpa quam consequuntur dolore omnis! Hic quae quis neque voluptatum quos voluptas culpa doloribus. Eaque laudantium, ea deserunt obcaecati est ratione nulla, doloribus eum deleniti sed qui hic, facere quamLorem ipsum dolor sit amet consectetur adipisicing elit. Ad ratione earum eveniet cumque autem incidunt numquam voluptatum eos magni, sunt, cum inventore odio veritatis quibusdam beatae quasi. Molestias qui vitae ipsa iusto quam laboriosam soluta reiciendis a corrupti suscipit. Quo ipsum natus commodi officiis quos fugiat adipisci dolor facilis repellat nemo, a, nulla molestias molestiae illum doloribus similique non ducimus quibusdam cupiditate voluptates laboriosam velit quia suscipit. Sed laboriosam, cupiditate culpa quam consequuntur dolore omnis! Hic quae quis neque voluptatum quos voluptas culpa doloribus. Eaque laudantium, ea deserunt obcaecati est ratione nulla, doloribus eum deleniti sed qui hic, facere quamLorem ipsum dolor sit amet consectetur adipisicing elit. Ad ratione earum eveniet cumque autem incidunt numquam voluptatum eos magni, sunt, cum inventore odio veritatis quibusdam beatae quasi. Molestias qui vitae ipsa iusto quam laboriosam soluta reiciendis a corrupti suscipit. Quo ipsum natus commodi officiis quos fugiat adipisci dolor facilis repellat nemo, a, nulla molestias molestiae illum doloribus similique non ducimus quibusdam cupiditate voluptates laboriosam velit quia suscipit. Sed laboriosam, cupiditate culpa quam consequuntur dolore omnis! Hic quae quis neque voluptatum quos voluptas culpa doloribus. Eaque laudantium, ea deserunt obcaecati est ratione nulla, doloribus eum deleniti sed qui hic, facere quam</p>
-    <img src="pinselstrich.jpg" height="250" width="250">
-    <img src="allover.jpg" height="250" width="250">
+    <p>Willkommen auf meiner Seite, hier bekommen Sie einen Einblick in meine bisherigen Arbeiten und haben außerdem die Möglichkeit, mich über die angegebenen Kontaktdaten zu erreichen. Viel Spaß beim Stöbern.</p>
+    <img src="affe.jpg" height="600" width="520">
 
     <footer>
       Luca Schnabl<br>
