--- a/projects.html
+++ b/projects.html
@@ -13,14 +13,18 @@
     </header>
     <nav>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <p>Home Seite</p>
+    <p>Bisherige Werke:</p>
+    <img src="pinselstrich.jpg" height="250" width="250">
+    <img src="allover.jpg" height="250" width="250">
+    <img src="affe.jpg" height="300" width="250">
     <footer>
+
       Luca Schnabl<br>
       All rights reserved.
     </footer>
