--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,15 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <p>Home Seite</p>
+    <h3>contact me</h3>
+    <img src="telefonicon.jpg" height="100" width="100">
+    <p>+ 0179 2366 574</p>
+    <img src="mailicon.jpg" height="100" width="100">
+    <p>lucaconnerschnabl@outlook.de</p>
+    <img src="instagramicon.png" height="100" width="100">
+    <p>luca_conner01</p>
+    <img src="facebookicon.png" height="100" width="200">
+    <p>Luca Conner Schnabl</p>
     <footer>
       Luca Schnabl<br>
       All rights reserved.
