--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Dokument</title>
     <link rel="stylesheet"
-    href="styles.css">
+    href="stylesproject.css">
   </head>
   <body>
     <header>
@@ -19,10 +19,26 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <p>Bisherige Werke:</p>
+    <h1>my recent work:</h1>
     <img src="pinselstrich.jpg" height="250" width="250">
+
+    <nav2 class="navigation2">
+      <ul>
+        <li><a href="pinselstrich.html">full picture</a></li>
+      </ul>
+    </nav2>
     <img src="allover.jpg" height="250" width="250">
+    <nav3 class="navigation3">
+      <ul>
+        <li><a href="allover.html">full picture</a></li>
+      </ul>
+    </nav3>
     <img src="affe.jpg" height="300" width="250">
+    <nav4 class="navigation4">
+      <ul>
+        <li><a href="affe.html">full picture</a></li>
+      </ul>
+    </nav4>
     <footer>
 
       Luca Schnabl<br>
