--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Dokument</title>
     <link rel="stylesheet"
-    href="styles.css">
+    href="stylesaboutme.css">
   </head>
   <body>
     <header>
@@ -19,7 +19,9 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <p>Home Seite</p>
+    <img src="portrait.jpg" height="300" width="250">
+    <h3>my name is Luca Conner Schnabl</h3>
+    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     <footer>
       Luca Schnabl<br>
       All rights reserved.
