--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <p>Willkommen auf meiner Seite, hier bekommen Sie einen Einblick in meine bisherigen Arbeiten und haben außerdem die Möglichkeit, mich über die angegebenen Kontaktdaten zu erreichen. Viel Spaß beim Stöbern.</p>
+    <h2>Welcome to my website. You can find my recent projects on here and also my contact dates to get in touch with me.</h2>
     <img src="affe.jpg" height="600" width="520">
 
     <footer>
