--- a/aboutme.html
+++ b/aboutme.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Dokument</title>
     <link rel="stylesheet"
-    href="stylesaboutme.css">
+    href="styles.css">
   </head>
   <body>
     <header>
+      <img src="bilder/logo.png" class="logo" height="100" width="150">
       <h1>About Me</h1>
       <h2>Luca Conner Schnabl</h2>
     </header>
@@ -19,7 +20,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <img src="portrait.jpg" height="300" width="250">
+    <img src="bilder/portrait.jpg" height="300" width="250">
     <h3>my name is Luca Conner Schnabl</h3>
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     <footer>
