--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <img src="bilder/logo.png" class="logo" height="100" width="150">
       <h1>Mein Portfolio</h1>
       <h2>Luca Conner Schnabl</h2>
     </header>
@@ -20,7 +21,7 @@
       </ul>
     </nav>
     <h2>Welcome to my website. You can find my recent projects on here and also my contact dates to get in touch with me.</h2>
-    <img src="affe.jpg" height="600" width="520">
+    <img src="bilder/affe.jpg" height="600" width="520">
 
     <footer>
       Luca Schnabl<br>
