--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Dokument</title>
     <link rel="stylesheet"
-    href="stylesproject.css">
+    href="styles.css">
   </head>
   <body>
     <header>
+      <img src="bilder/logo.png" class="logo" height="100" width="150">
       <h1>Projects</h1>
       <h2>Luca Conner Schnabl</h2>
     </header>
@@ -20,20 +21,20 @@
       </ul>
     </nav>
     <h1>my recent work:</h1>
-    <img src="pinselstrich.jpg" height="250" width="250">
+    <img src="bilder/pinselstrich.jpg" height="250" width="250">
 
     <nav2 class="navigation2">
       <ul>
         <li><a href="pinselstrich.html">full picture</a></li>
       </ul>
     </nav2>
-    <img src="allover.jpg" height="250" width="250">
+    <img src="bilder/allover.jpg" height="250" width="250">
     <nav3 class="navigation3">
       <ul>
         <li><a href="allover.html">full picture</a></li>
       </ul>
     </nav3>
-    <img src="affe.jpg" height="300" width="250">
+    <img src="bilder/affe.jpg" height="300" width="250">
     <nav4 class="navigation4">
       <ul>
         <li><a href="affe.html">full picture</a></li>
