--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <img src="bilder/logo.png" class="logo" height="100" width="150">
       <h1>Contact</h1>
       <h2>Luca Conner Schnabl</h2>
     </header>
@@ -20,13 +21,13 @@
       </ul>
     </nav>
     <h3>contact me</h3>
-    <img src="telefonicon.jpg" height="100" width="100">
+    <img src="bilder/telefonicon.jpg" height="100" width="100">
     <p>+ 0179 2366 574</p>
-    <img src="mailicon.jpg" height="100" width="100">
+    <img src="bilder/mailicon.jpg" height="100" width="100">
     <p>lucaconnerschnabl@outlook.de</p>
-    <img src="instagramicon.png" height="100" width="100">
+    <img src="bilder/instagramicon.png" height="100" width="100">
     <p>luca_conner01</p>
-    <img src="facebookicon.png" height="100" width="200">
+    <img src="bilder/facebookicon.png" height="100" width="200">
     <p>Luca Conner Schnabl</p>
     <footer>
       Luca Schnabl<br>
