--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <h1>Mein Portfolio</h1>
       <h2>Luca Conner Schnabl</h2>
     </header>
-    <nav>
+    <nav1>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-    </nav>
+    </nav1>
     <h2>Welcome to my website. You can find my recent projects on here and also my contact dates to get in touch with me.</h2>
     <img src="bilder/affe.jpg" height="600" width="520">
 
